Добавлены тесты, дополнен docker-compose.yml